Fix resizing cursor flicker.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,13 @@ html, body {
       }
     }
   }
+
+  &.resizing {
+    cursor: col-resize;
+    &.row {
+      cursor: row-resize;
+    }
+  }
 }
 
 .table {
